<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.your.app.p4ck4ge.name.MainActivity$PlaceholderFragment" 
    >
    
  
      <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:gravity="top"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />
                     
     
      <RelativeLayout android:layout_width="fill_parent"
        android:paddingLeft="@dimen/buttons_horizontal_margin"
    	android:paddingRight="@dimen/buttons_horizontal_margin"
    	android:layout_height="fill_parent" android:layout_below="@id/imageView1">
      
    <ScrollView android:layout_width="fill_parent"        
    	android:layout_height="wrap_content" android:layout_centerInParent="true">
    <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <Button android:id="@+id/notification" style="@style/CustomStyleButtonBlue"         
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:typeface="sans"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/menu_notification"           
    ></Button>

    <Button
        android:id="@+id/offerwall" style="@style/CustomStyleButtonBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/menu_offerwall" />
    
    <Button
        android:id="@+id/hiddenOfferwall" style="@style/CustomStyleButtonBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/menu_hidden_offerwall" />
    
    <Button
        android:id="@+id/preferences" style="@style/CustomStyleButtonBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/menu_preferences" />
    
    <Button
        android:id="@+id/interstitial" style="@style/CustomStyleButtonBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/menu_interstitial" />
    
    <Button
        android:id="@+id/video" style="@style/CustomStyleButtonBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/menu_video" />
        
    </LinearLayout>
    </ScrollView>
        
   </RelativeLayout>
</RelativeLayout>
